--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,13 @@ input.choose--file {
   margin-bottom: 2rem;
 }
 
+/*----------------------*/
+/*--Trilobite image-----*/
+/*----------------------*/
+
 .trilo-img {
   display: block;
   margin: 0 auto;
-  border-radius: 20px;
+  border-radius: 10px;
 
 }
