--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,9 @@ input.choose--file {
   border-radius: 10px;
 
 }
+
+.trilobite-img {
+  display: block;
+  margin: 0 auto;
+  border-radius: 10px;
+}
