--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,8 @@ input.choose--file {
   margin: 0 auto;
   border-radius: 10px;
 }
+
+/*----------------------*/
+/*--- CANVAS IMAGE -----*/
+/*----------------------*/
+
